--- a/spec/assets/php-extensions.yml
+++ b/spec/assets/php-extensions.yml
@@ -21,8 +21,8 @@ native_modules:
   md5: b3958716b4e53ddc5992e6c49d97e819
   klass: LibmemcachedRecipe
 - name: librdkafka
-  version: 0.11.6
-  md5: 5a1f9b0ee460ea07e2aa50ad6c65383b
+  version: 1.1.0
+  md5: 95a8a8432b8b66325dbb6ce89369e183
   klass: LibRdKafkaRecipe
 - name: cassandracppdriver
   version: 2.9.0
@@ -32,6 +32,10 @@ native_modules:
   version: 2.3.7
   md5: 274a711b0c77394e052db6493840c6f9
   klass: UnixOdbcRecipe
+- name: libsodium
+  version: 1.0.18
+  md5: 3ca9ebc13b6b4735acae0a6a4c4f9a95
+  klass: LibSodiumRecipe
 extensions:
 - name: apcu
   version: 5.1.17
@@ -66,8 +70,8 @@ extensions:
   md5: a7c169e3b3d5fec295a768edcea2a82e
   klass: PeclRecipe
 - name: mongodb
-  version: 1.5.3
-  md5: 20b0beb6171f36671ee194af35454092
+  version: 1.6.0
+  md5: f86a9dbdf95e352114e44f850c293bfa
   klass: PeclRecipe
 - name: msgpack
   version: 2.0.3
@@ -90,12 +94,12 @@ extensions:
   md5: fa932e2d60e9c3782f30ba0b0ab77516
   klass: PeclRecipe
 - name: rdkafka
-  version: 3.1.0
-  md5: aa8a602d7cd61abc4db983c38a99fbee
+  version: 3.1.2
+  md5: 5a42df2c7c54ac53f6d73900dcd551cf
   klass: PeclRecipe
 - name: redis
-  version: 4.3.0
-  md5: d1fdb05c3dea40c45c279f88895309f8
+  version: 5.0.2
+  md5: 0fed05402f8eabc2030ae327df0d1e27
   klass: RedisPeclRecipe
 - name: sqlsrv
   version: 5.6.1
@@ -110,17 +114,21 @@ extensions:
   md5: 5d1a8ca3101df93938d283933f256493
   klass: PeclRecipe
 - name: yaf
-  version: 3.0.7
-  md5: d09cdd5b04a25a3fd5a44d3507653e88
+  version: 3.0.8
+  md5: 636b2284f0c89640e598f59956b4c0f8
   klass: PeclRecipe
 - name: yaml
   version: 2.0.4
   md5: 4f2c2620fb18db8ef6a1d5727f57d945
   klass: PeclRecipe
 - name: memcached
-  version: 3.1.3
-  md5: 29e64c6b6484a2aed6185974c8108465
+  version: 3.1.4
+  md5: c50f416ff9fc66360b5bd7a5017dc829
   klass: MemcachedPeclRecipe
+- name: sodium
+  version: nil
+  md5: nil
+  klass: SodiumRecipe
 - name: tidy
   version: nil
   md5: nil
@@ -158,24 +166,24 @@ extensions:
   md5: d45a7137edd361998494a8894fe50888
   klass: AmqpPeclRecipe
 - name: ioncube
-  version: 10.3.4
-  md5: 0dc4059f37ab75e68d4e101e260226d7
+  version: 10.3.8
+  md5: 5d65b82946f773b496716ebd988bf926
   klass: IonCubeRecipe
 - name: lua
   version: 2.0.6
   md5: 421acf9ca1a6e30d65fc9af1709ece36
   klass: LuaPeclRecipe
 - name: maxmind
-  version: 1.4.0
-  md5: 0c92c43543b88486ef03b6e0036ad315
+  version: 1.4.1
+  md5: a7af8a8a4307f4fa867ee5c0d5120260
   klass: MaxMindRecipe
 - name: libmaxmind
   version: 1.3.2
   md5: 67a861965b30d045bf29a2126bcc05ed
   klass: LibMaxMindRecipe
 - name: phalcon
-  version: 3.4.3
-  md5: 336cdd9f34536e2c4fcba0f5138685de
+  version: 3.4.4
+  md5: 6f8c8d5a752f953491bd0f4f5c63adbf
   klass: PhalconRecipe
 - name: phpiredis
   version: 1.0.0
@@ -190,8 +198,8 @@ extensions:
   md5: 7ca0429d4465debb5dad4680825d22b8
   klass: TidewaysXhprofRecipe
 - name: tideways_xhprof
-  version: 5.0-beta3
-  md5: 6eccabe7fb2cdd0baced36417f0dd69e
+  version: 5.0.0
+  md5: 72a562882b6ea5e3bb25bd68c58707e3
   klass: TidewaysXhprofRecipe
 - name: oci8
   version: 2.2.0
@@ -201,7 +209,3 @@ extensions:
   version: nil
   md5: nil
   klass: OraclePdoRecipe
-- name: solr
-  version: 2.4.0
-  md5: 2c9accf66681a3daaaf371bc07e44902
-  klass: PeclRecipe
