--- a/spec/assets/php-extensions.yml
+++ b/spec/assets/php-extensions.yml
@@ -1,53 +1,37 @@
 ---
 native_modules:
 - name: rabbitmq
-  version: 0.9.0
-  md5: 3d7a3894e6b191127be7987fbae0e157
+  version: 0.10.0
+  md5: 6f09f0cb07cea221657a768bd9c7dff7
   klass: RabbitMQRecipe
 - name: lua
-  version: 5.3.5
-  md5: 4f4b4f323fd3514a68e0ab3da8ce3455
+  version: 5.4.0
+  md5: dbf155764e5d433fc55ae80ea7060b60
   klass: LuaRecipe
 - name: hiredis
-  version: 0.13.3
-  md5: 43dca1445ec6d3b702821dba36000279
+  version: 1.0.0
+  md5: 209ae570cdee65a5143ea6db8ac07fe3
   klass: HiredisRecipe
 - name: snmp
   version: nil
   md5: nil
   klass: SnmpRecipe
-- name: libmemcached
-  version: 1.0.18
-  md5: b3958716b4e53ddc5992e6c49d97e819
-  klass: LibmemcachedRecipe
 - name: librdkafka
-  version: 1.1.0
-  md5: 95a8a8432b8b66325dbb6ce89369e183
+  version: 1.5.2
+  md5: f5272e30ab6556967ed82a58d2ad35e1
   klass: LibRdKafkaRecipe
-- name: cassandracppdriver
-  version: 2.9.0
-  md5: e686d261ce6960f3f5813914116863d0
-  klass: CassandraCppDriverRecipe
-- name: unixodbc
-  version: 2.3.7
-  md5: 274a711b0c77394e052db6493840c6f9
-  klass: UnixOdbcRecipe
 - name: libsodium
   version: 1.0.18
   md5: 3ca9ebc13b6b4735acae0a6a4c4f9a95
   klass: LibSodiumRecipe
 extensions:
 - name: apcu
-  version: 5.1.17
-  md5: 8d60ffd6dcec221f8bce957a09511f87
+  version: 5.1.19
+  md5: a868ee0b4179fb240cf6eb7e49723794
   klass: PeclRecipe
-- name: geoip
-  version: 1.1.1
-  md5: 4f5f4b8a41a5802de6591c79b85cc838
-  klass: GeoipRecipe
 - name: igbinary
-  version: 3.0.1
-  md5: fb3b2f7fa306ca582afd9f382c409a24
+  version: 3.1.6
+  md5: 9d1e0530025c7f129f46c81f7581af98
   klass: PeclRecipe
 - name: gnupg
   version: 1.4.0
@@ -58,24 +42,24 @@ extensions:
   md5: 6d3a7048ab73b0fab931f28c484dbf76
   klass: PeclRecipe
 - name: LZF
-  version: 1.6.7
-  md5: 3c5db2561efaad9f3d81fa9427139ba3
+  version: 1.6.8
+  md5: 0677fba342c89795de6c694f3e72ba1d
   klass: PeclRecipe
 - name: mailparse
-  version: 3.0.3
-  md5: a7c169e3b3d5fec295a768edcea2a82e
+  version: 3.1.1
+  md5: 17d77e3c03c25acaf51926a9020a4596
   klass: PeclRecipe
 - name: mongodb
-  version: 1.6.0
-  md5: f86a9dbdf95e352114e44f850c293bfa
+  version: 1.9.0
+  md5: 780f206f6a9399b5a4cabfd304f6ecff
   klass: PeclRecipe
 - name: msgpack
-  version: 2.0.3
-  md5: 8ed9843595c3b183ee79fd76b3039384
+  version: 2.1.2
+  md5: 9bcaad416fc2b3c6ffd6966e0ae30313
   klass: PeclRecipe
 - name: oauth
-  version: 2.0.4
-  md5: ade75f04c172f06d24f99d0b30bccf2c
+  version: 2.0.7
+  md5: 8ea6eb5ac6de8a4ed399980848c04c0c
   klass: PeclRecipe
 - name: odbc
   version: nil
@@ -86,37 +70,51 @@ extensions:
   md5: nil
   klass: PdoOdbcRecipe
 - name: pdo_sqlsrv
-  version: 5.6.1
-  md5: fa932e2d60e9c3782f30ba0b0ab77516
+  version: 5.8.1
+  md5: e687989a47cefd6cf9005e1f41637289
   klass: PeclRecipe
 - name: rdkafka
-  version: 3.1.2
-  md5: 5a42df2c7c54ac53f6d73900dcd551cf
+  version: 4.1.1
+  md5: f4b39d7f6b4c489bfb4c5532f71046c2
   klass: PeclRecipe
 - name: redis
-  version: 5.0.2
-  md5: 0fed05402f8eabc2030ae327df0d1e27
+  version: 5.3.2
+  md5: 8531a792d43a60dd03f87eec7b65b381
   klass: RedisPeclRecipe
+- name: ssh2
+  version: 1.2
+  md5: ae62ba2d4a7bbd5eff34daa8ed9f6ed6
+  klass: PeclRecipe
 - name: sqlsrv
-  version: 5.6.1
-  md5: c7b66e343d4ae0760a658964552966b4
+  version: 5.8.1
+  md5: 1a237f847d4466a85f7bfdb6b2fd5ecd
   klass: PeclRecipe
 - name: stomp
   version: 2.0.2
   md5: 507c30184fde736e924cee20c56df061
   klass: PeclRecipe
 - name: xdebug
-  version: 2.8.1
-  md5: 4170605efa503e1f116db0ab7b020848
+  version: 3.0.1
+  md5: 52891d89de6829fa8dba1132b8c66f75
+  klass: PeclRecipe
+- name: yaf
+  version: 3.2.5
+  md5: 8cd86db117f65131d212cac1c60065a3
   klass: PeclRecipe
 - name: yaml
-  version: 2.0.4
-  md5: 4f2c2620fb18db8ef6a1d5727f57d945
+  version: 2.2.0
+  md5: cd8d34b87d9e147691d66590c403ba46
   klass: PeclRecipe
 - name: memcached
-  version: 3.1.4
-  md5: c50f416ff9fc66360b5bd7a5017dc829
+  version: 3.1.5
+  md5: eb535a7551aad6bff0d836a4dec9c4fa
   klass: MemcachedPeclRecipe
+- name: sodium
+  version: nil
+  md5: nil
+  klass: SodiumRecipe
+
+#bundled w/PHP
 - name: tidy
   version: nil
   md5: nil
@@ -137,25 +135,39 @@ extensions:
   version: nil
   md5: nil
   klass: FakePeclRecipe
+- name: zip
+  version: nil
+  md5: nil
+  klass: FakePeclRecipe
+
+#non-standard
+- name: amqp
+  version: 1.10.2
+  md5: 1163a52a495cab5210a6a2c8deb60064
+  klass: AmqpPeclRecipe
 - name: ioncube
-  version: 10.3.8
-  md5: 5d65b82946f773b496716ebd988bf926
+  version: 10.4.4
+  md5: 1e6b0d8a8db6c5536c99bd7e67eb6a4f
   klass: IonCubeRecipe
 - name: lua
-  version: 2.0.6
-  md5: 421acf9ca1a6e30d65fc9af1709ece36
+  version: 2.0.7
+  md5: a37402f8b10753a80db56b61e2e70c29
   klass: LuaPeclRecipe
-- name: maxmind
-  version: 1.4.1
-  md5: a7af8a8a4307f4fa867ee5c0d5120260
+- name: maxminddb
+  version: 1.8.0
+  md5: ed95e0d8914ff5dd340fa6cf47b2b921
   klass: MaxMindRecipe
-- name: libmaxmind
-  version: 1.3.2
-  md5: 67a861965b30d045bf29a2126bcc05ed
-  klass: LibMaxMindRecipe
+- name: psr
+  version: 1.0.1
+  md5: 9e44b2f2e271bf57c5dbf6b6b07a8acf
+  klass: PeclRecipe
+- name: phalcon
+  version: 4.1.0
+  md5: c13b72a724820027ec9889f0dca0670d
+  klass: PeclRecipe
 - name: phpiredis
-  version: 1.0.0
-  md5: d84a6e7e3a54744269fd776d7be80be1
+  version: 1.0.1
+  md5: 09a9bdb347c70832d3e034655b604064
   klass: PHPIRedisRecipe
 - name: phpprotobufpecl
   version: 0.12.4
@@ -163,12 +175,19 @@ extensions:
   klass: PHPProtobufPeclRecipe
 - name: tideways_xhprof
   version: 5.0.2
-  md5: 374cf4ff7ba03401a279777abe94815d
+  md5: 374cf4ff7ba03401a279777abe94815d #curl -sL https://github.com/tideways/php-xhprof-extension/archive/v5.0.2.tar.gz  | md5sum | cut -d ' ' -f 1
   klass: TidewaysXhprofRecipe
 - name: solr
-  version: 2.5.0
-  md5: 5034f5d274e2c80b8ac63f601d0beb01
+  version: 2.5.1
+  md5: 29fc866198d61bccdbc4c4f53fb7ef06
   klass: PeclRecipe
+
+- name: gd
+  version: nil
+  md5: nil
+  klass: Gd74FakePeclRecipe
+
+#Oracle client stuff. Not included unless libs are present
 - name: oci8
   version: 2.2.0
   md5: 678d2a647881cd8e5b458c669dcce215
